--- a/main.css
+++ b/main.css
@@ -2,19 +2,304 @@ body {
     background-color: black;
     width: 95%;
     margin: auto;
+    display: flex;
+    flex-direction: column;
+    font-family: sans-serif;
 }
 
 .header {
-    background: url('素材/starfield-banner.jpg ');
-    position: fixed;
-    width: 95%;
+    background: url('images/starfield-banner.jpg ');
+    display: flex;
+    flex-direction: row;
 }
 
 .header .logo-link {
     padding: 10px;
+    flex: 1;
 }
 
-.header .logo {
-    width:110px;
-    margin:11px;
+.head-link {
+    flex: 5;
+    display: flex;
+    flex-direction: column;
+    color: white;
+    justify-content: flex-end;
+    align-items: flex-end;
+}
+
+.head-link-top {
+    font-size: 20px;
+    line-height: 300%;
+    margin: 1%;
+}
+
+.head-link-bottom {
+    background-color: grey;
+    font-size: 10px;
+    line-height: 300%;
+    text-align: center;
+    margin: 1%;
+}
+
+.head-search {
+    display: flex;
+    flex-direction: row;
+    flex: 1;
+    margin-top: 2%;
+}
+
+.head-search input {
+    opacity: 0.4;
+    background-color: darkgrey;
+
+    height: 30%;
+    width: 80%;
+}
+
+.head-search input::placeholder {
+    color: white;
+    margin-left: 10%;
+}
+
+.head-search img {
+    height: 30%;
+    width: 15%;
+}
+
+.content {
+    display: flex;
+    flex-direction: column;
+}
+
+.content-top {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+
+.content-top-dawn {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    flex: 1 0;
+    background-image: url('images/pia21924-16.jpg ');
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    margin: 1%;
+}
+
+.content-top-dawn-item {
+
+}
+
+.content-top-all {
+    display: flex;
+    flex-direction: column;
+    flex: 1 0;
+    margin: 1%;
+    justify-content: space-around;
+}
+
+.content-top-all-top {
+    display: flex;
+    flex-direction: row;
+    flex: 1 0;
+    justify-content: space-around;
+}
+
+.content-top-all-top-left {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    flex: 1 0;
+    background-image: url('images/mollweide_cycle.jpg');
+    background-repeat: no-repeat;
+    color: white;
+    margin: 1%;
+}
+
+.content-top-all-top-right {
+    color: white;
+    background-color: cyan;
+    display: flex;
+    flex-direction: column;
+    flex: 1 0;
+    margin: 1%;
+}
+
+.content-top-all-bottom {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    margin: 1% 1% 0 1%;
+    color: white;
+    background-image: url('images/s69-39961.jpg');
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+    height: 300px;
+}
+
+.content-bottom {
+    display: flex;
+    flex-direction: column;
+    color: white;
+    margin: 0.5% 1% 0.5% 0.5%;
+}
+
+.content-bottom-top {
+    display: flex;
+    flex-direction: row;
+}
+
+.content-bottom-top-item1 {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    flex: 1;
+    background-image: url('images/ssc2017-14a1.jpg');
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+    height: 300px;
+    margin: 0.5%;
+}
+
+.content-bottom-top-item3 {
+/*    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    height: 300px;*/
+    background-color: grey;
+    flex: 1;
+    margin: 0.5%;
+}
+
+.content-bottom-top-item2 {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    flex: 2;
+    background-image: url('images/pia22556-16.gif');
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+    height: 300px;
+    margin: 0.5%;
+}
+
+.content-bottom-bottom {
+    display: flex;
+    flex-direction: row;
+}
+
+.content-bottom-bottom-item1 {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    background-image: url('images/nasa_logo.png');
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+    background-color: grey;
+    height: 300px;
+    flex: 1;
+    margin: 0.5%;
+}
+
+.content-bottom-bottom-item2 {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    background-image: url('images/io-home.gif');
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+    height: 300px;
+    flex: 1;
+    margin: 0.5%;
+}
+
+.content-bottom-bottom-item3 {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    background-image: url('images/cassini20170809.jpg');
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+    height: 300px;
+    flex: 1;
+    margin: 0.5%;
+}
+
+.content-bottom-bottom-item4 {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    flex: 1;
+    background-image: url('images/fermiicecube_as.jpg');
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+    height: 300px;
+    margin: 0.5%;
+}
+
+.footer {
+    display: flex;
+    flex-direction: column;
+    margin: 0.5% 1% 0.5% 0.5%;
+
+}
+
+.footer-border {
+    color: white;
+    background-color: dodgerblue;
+    text-align: center;
+    margin: 0.5%;
+    line-height: 250%;
+}
+
+.footer-content {
+    display: flex;
+    flex-direction: row;
+}
+
+.footer-content-left {
+    display: flex;
+    flex-direction: row;
+    flex: 1;
+    margin: 2%;
+    height: 100px;
+}
+
+.footer-content-left img {
+    height: 60%;
+    width: 15%;
+    margin-right: 5%;
+}
+
+.footer-content-left div {
+    font-size: 11px;
+}
+
+.footer-content-right {
+    color: blue;
+    flex: 2;
+    font-size: 11px;
+    align-self: flex-end;
+    margin: 2%;
+}
+
+
+div[class^='content-'] label {
+    color: white;
+    background: dodgerblue;
+    opacity: 0.8;
+    align-self: flex-start;
+    line-height: 150%;
+    padding: 1%;
+}
+
+label + div {
+    background: white;
+    opacity: 0.8;
+    color: #000;
+    line-height: 150%;
+    padding: 1%;
+    font-weight: bolder;
 }
